public/stylesheets/style.css
.card {
  background: #eaeaea;
}

a {
  color: #00B7FF;
}

body {
  margin-bottom: 60px; /* Margin bottom by footer height */
}
body.nav {
  margin-top: 4.5rem;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

.footer .dropdown-menu label, .footer .dropdown-menu .form-group {
  line-height: 1.5;
}

.share-menu {
  min-width: 300px;
}

.donate-menu {
  min-width: 25%;
}

.btn:disabled {
  cursor: not-allowed;
}

